--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <span>Copyright &copy; | Gabriel Lucena</span>
         
     </footer>
-    <script src="./scrpit.js" defer></script>
+    <script src="./script.js" defer></script>
 </body>
 
 </html>
