Trabalhos APIs (sem o slide)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./pesquisa.css">
     <title>Galeria</title>
 </head>
 
@@ -14,6 +15,9 @@
         <h1>Galeria</h1>
     </header>
     <main>
+        <div class="pesquisa-container">
+            <input type="text" placeholder="Digite o nome de uma raça" name="" id="">
+        </div>
         <div class="galeria-container">
         </div>
 
